modified:   php.ini

--- a/OpsWorks/abc/php.ini
+++ b/OpsWorks/abc/php.ini
@@ -1,8 +1,8 @@
 ;Use this file for specific PHP settings on your server required for AbanteCart.
 
 output_buffering = 4096;
-magic_quotes_gpc = Off;
-register_globals = Off;
+magic_quotes_gpc = On;
+register_globals = On;
 default_charset	= UTF-8;
 memory_limit = 128M;
 max_execution_time = 18000;
